--- a/StudioConcept/ActionItem/SequenceAction.xaml
+++ b/StudioConcept/ActionItem/SequenceAction.xaml
@@ -4,13 +4,32 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:ctv="clr-namespace:StudioConcept.Converter"
+             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+             xmlns:command="http://www.galasoft.ch/mvvmlight"
              mc:Ignorable="d" >
     <UserControl.Resources>
+        <ctv:ColorToBrushConverter x:Key="ColorToBrushConverter"></ctv:ColorToBrushConverter>
+        <ctv:MvvmLightConverter x:Key="MvvmLightConverter"></ctv:MvvmLightConverter>
         <ctv:ShapeTextPositionConverter x:Key="ShapeTextPositionConverter"/>
     </UserControl.Resources>
     <Canvas>
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="MouseLeftButtonDown">
+                <command:EventToCommand Command="{Binding MouseDownCommand}" 
+                                    PassEventArgsToCommand="True" />
+            </i:EventTrigger>
+            <i:EventTrigger EventName="MouseLeftButtonUp">
+                <command:EventToCommand Command="{Binding MouseUpCommand}" 
+                                        PassEventArgsToCommand="True" />
+            </i:EventTrigger>
+            <i:EventTrigger EventName="MouseMove">
+                <command:EventToCommand Command="{Binding MouseMoveCommand}" 
+                                        PassEventArgsToCommand="True" />
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
         <Path x:Name="Shape" Data="{Binding Data}"
-              Fill="{Binding Color, Converter={StaticResource stringToBrushConverter}}"/>
+              Fill="{Binding Color, Converter={StaticResource ColorToBrushConverter}}">
+        </Path>
         <TextBlock FontSize="{Binding FontSize}" x:Name="ActionName" Foreground="White" Text="{Binding Text}" Canvas.Left="{Binding Converter={StaticResource ShapeTextPositionConverter}, ConverterParameter=Canvas.Left}"
                    Canvas.Top="{Binding Converter={StaticResource ShapeTextPositionConverter}, ConverterParameter=Canvas.Top}" />
     </Canvas>
